{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 65,
  "lineage": "3c6fd21a-a1a7-a0f5-87fc-65b49f806d25",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "ceramic-ip-address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.150.218.204",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-01-12T10:02:39.890-08:00",
            "id": "projects/metaphor-app/regions/us-east4/addresses/ceramic-ip-address",
            "name": "ceramic-ip-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "metaphor-app",
            "region": "us-east4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metaphor-app/regions/us-east4/addresses/ceramic-ip-address",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/metaphor-app/zones/us-east4-b/instances/ceramic-daemon"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ceramic-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-01-11T12:57:08.723-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/metaphor-app/global/firewalls/ceramic-daemon-http",
            "log_config": [],
            "name": "ceramic-daemon-http",
            "network": "https://www.googleapis.com/compute/v1/projects/metaphor-app/global/networks/ceramic",
            "priority": 1000,
            "project": "metaphor-app",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metaphor-app/global/firewalls/ceramic-daemon-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ceramic-daemon"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ipfs-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-01-12T07:56:13.131-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/metaphor-app/global/firewalls/ipfs-allow-ssh",
            "log_config": [],
            "name": "ipfs-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/metaphor-app/global/networks/ceramic",
            "priority": 1000,
            "project": "metaphor-app",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metaphor-app/global/firewalls/ipfs-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ipfs-daemon"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ipfs-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "4011",
                  "5011"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-01-11T12:57:08.721-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/metaphor-app/global/firewalls/ipfs-daemon-http",
            "log_config": [],
            "name": "ipfs-daemon-http",
            "network": "https://www.googleapis.com/compute/v1/projects/metaphor-app/global/networks/ceramic",
            "priority": 1000,
            "project": "metaphor-app",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metaphor-app/global/firewalls/ipfs-daemon-http",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "ceramic-daemon"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "ipfs-daemon"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "ceramic-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "attached_disk": [
              {
                "device_name": "ceramic-data-0",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/metaphor-app/zones/us-east4-b/disks/ceramic-data-0"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/cos-cloud/global/images/cos-stable-93-16623-39-40",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/metaphor-app/zones/us-east4-b/disks/ceramic-daemon"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/metaphor-app/zones/us-east4-b/instances/ceramic-daemon",
            "instance_id": "4666934140177887015",
            "label_fingerprint": "2KUxMMUQJ_o=",
            "labels": {
              "container-vm": "cos-stable-93-16623-39-40"
            },
            "machine_type": "e2-standard-2",
            "metadata": {
              "gce-container-declaration": "\"spec\":\n  \"containers\":\n  - \"args\":\n    - \"--hostname\"\n    - \"0.0.0.0\"\n    - \"--port\"\n    - \"80\"\n    - \"--network\"\n    - \"testnet-clay\"\n    - \"--ipfs-api\"\n    - \"http://10.150.0.6:5011\"\n    - \"--state-store-directory\"\n    - \"/data\"\n    \"image\": \"ceramicnetwork/js-ceramic:prod\"\n    \"volumeMounts\":\n    - \"mountPath\": \"/data\"\n      \"name\": \"ceramic-data-0\"\n      \"readOnly\": false\n  \"restartPolic [...]
            },
            "metadata_fingerprint": "9qfdTGFPdVs=",
            "name": "ceramic-daemon",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.150.218.204",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/metaphor-app/global/networks/ceramic",
                "network_ip": "10.150.0.8",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/metaphor-app/regions/us-east4/subnetworks/ceramic",
                "subnetwork_project": "metaphor-app"
              }
            ],
            "project": "metaphor-app",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/metaphor-app/zones/us-east4-b/instances/ceramic-daemon",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ceramic-daemon"
            ],
            "tags_fingerprint": "5BOSi7Y2Ad4=",
            "zone": "us-east4-b"
          },
          "dependencies": [
            "google_compute_address.ceramic-ip-address",
            "google_compute_disk.ceramic-disk",
            "google_compute_disk.ipfs-disk",
            "google_compute_instance.ipfs-instance",
            "google_compute_network.vpc_network",
            "module.ceramic-daemon.data.google_compute_image.coreos",
            "module.ipfs-daemon.data.google_compute_image.coreos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "ipfs-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "attached_disk": [
              {
                "device_name": "ipfs-data-0",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/metaphor-app/zones/us-east4-b/disks/ipfs-data-0"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/cos-cloud/global/images/cos-stable-93-16623-39-40",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/metaphor-app/zones/us-east4-b/disks/ipfs-daemon"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/metaphor-app/zones/us-east4-b/instances/ipfs-daemon",
            "instance_id": "6355301929017651973",
            "label_fingerprint": "2KUxMMUQJ_o=",
            "labels": {
              "container-vm": "cos-stable-93-16623-39-40"
            },
            "machine_type": "e2-standard-2",
            "metadata": {
              "gce-container-declaration": "\"spec\":\n  \"containers\":\n  - \"env\":\n    - \"name\": \"IPFS_PATH\"\n      \"value\": \"/data\"\n    \"image\": \"ceramicnetwork/ipfs-daemon:prod\"\n    \"ports\":\n    - \"containerPort\": 5011\n    - \"containerPort\": 4011\n    \"volumeMounts\":\n    - \"mountPath\": \"/data\"\n      \"name\": \"ipfs-data-0\"\n      \"readOnly\": false\n  \"restartPolicy\": \"Always\"\n  \"volumes\":\n  - \"gcePersistentDisk\":\n      \"fsType\": \"ext4\"\n    [...]
            },
            "metadata_fingerprint": "FKA9hLX7gRg=",
            "name": "ipfs-daemon",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.145.235.47",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/metaphor-app/global/networks/ceramic",
                "network_ip": "10.150.0.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/metaphor-app/regions/us-east4/subnetworks/ceramic",
                "subnetwork_project": "metaphor-app"
              }
            ],
            "project": "metaphor-app",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/metaphor-app/zones/us-east4-b/instances/ipfs-daemon",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ipfs-daemon"
            ],
            "tags_fingerprint": "MzS_uAeAMWU=",
            "zone": "us-east4-b"
          },
          "dependencies": [
            "google_compute_disk.ipfs-disk",
            "google_compute_network.vpc_network",
            "module.ipfs-daemon.data.google_compute_image.coreos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/metaphor-app/global/networks/ceramic",
            "mtu": 0,
            "name": "ceramic",
            "project": "metaphor-app",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/metaphor-app/global/networks/ceramic"
          }
        }
      ]
    }
  ]
}